[package]
name = "codex-session-sync"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive"] }
fs2 = "0.4.3"
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
time = { version = "0.3.44", features = ["formatting", "parsing", "macros"] }
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
